v2.0 Major change. Added support for multiple people's configurations.